--- a/app/app.ejs
+++ b/app/app.ejs
@@ -38,6 +38,7 @@
     <script src="./assets/js/scripts/uibind.js"></script>
     <script src="./assets/js/scripts/Layer.js"></script>
     <script src="./assets/js/ui/popup-element.js"></script>
+    <script src="./assets/js/ui/slider-element.js"></script>
     <script src="./assets/js/settings.js"></script>
     <script src="./assets/js/versionChooser.js"></script>
     <script src="./assets/js/scripts/renderer.js"></script>
