popup element fixes

--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1306,6 +1306,7 @@ input:checked + .toggleSwitchSlider:before {
 }
 
 .tooltip .content {
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 16px;
 }
