--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -671,8 +671,8 @@ h5 {
     position: relative;
     padding: 60px 40px 70px;
     flex: 1 1 auto;
-    max-width: 800px;
-    min-width: 512px;
+    max-width: 740px;
+    min-width: 460px;
     min-height: 100%;
 }
 
@@ -770,9 +770,9 @@ input:checked + .toggleSwitchSlider:before {
 
 .slider {
     transition: none;
-    width: 35%;
-    height: 5px;
-    margin: 15px 0px;
+    width: 100%;
+    height: 8px;
+    margin: 18px 0px;
     background: var(--background-accent-alt);
     border-radius: 3px;
     position: relative;
@@ -782,7 +782,7 @@ input:checked + .toggleSwitchSlider:before {
     position: absolute;
     background: var(--background-accent);
     width: 50%;
-    height: 5px;
+    height: 100%;
     border-radius: 3px 0px 0px 3px;
 }
 .slider > .slider-track {
@@ -797,9 +797,8 @@ input:checked + .toggleSwitchSlider:before {
     transition: inherit;
     left: 50%;
     position: absolute;
-    width: 8px;
+    width: 10px;
     height: 24px;
-    margin-left: -5px;
     top: 50%;
     margin-top: -13px;
     border-radius: 3px;
@@ -1342,4 +1341,24 @@ a.anchor {
 }
 a.anchor:hover {
     text-decoration: underline;
+}
+
+.flex-group {
+    display: flex;
+}
+.flex-group.vertical {
+    flex-direction: column;
+}
+.flex-group.horizontal {
+    flex-direction: row;
+}
+.flex-group > .flex-child {
+    position: relative;
+    flex: 1 1 50%;
+}
+.flex-group > .flex-child:first-child {
+    margin-right: 10px;
+}
+.flex-group > .flex-child:last-child {
+    margin-left: 10px;
 }
