--- a/app/app.ejs
+++ b/app/app.ejs
@@ -39,6 +39,7 @@
     <script src="./assets/js/scripts/Layer.js"></script>
     <script src="./assets/js/ui/popup-element.js"></script>
     <script src="./assets/js/ui/slider-element.js"></script>
+    <script src="./assets/js/scripts/svg.js"></script>
     <script src="./assets/js/settings.js"></script>
     <script src="./assets/js/versionChooser.js"></script>
     <script src="./assets/js/scripts/renderer.js"></script>
