--- a/app/main.ejs
+++ b/app/main.ejs
@@ -1,10 +1,6 @@
 <div class="container">
     <div class="sidebar-main" id="main-version-list">
-        <div class="sidebar-region">
-            <div class="sidebar">
-                <div class="item header">Версии</div>
-            </div>
-        </div>
+        <div class="sidebar-region"></div>
     </div>
     <div id="main" class="base">
         <div id="topBar" class="hidden">
