--- a/app/main.ejs
+++ b/app/main.ejs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="sidebar-main" id="main-version-list">
-        <div class="sidebar-region"></div>
+        <nav class="localVersions"></nav>
     </div>
     <div id="main" class="base">
         <div id="topBar" class="hidden">
