--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1352,22 +1352,25 @@ input:checked + .toggleSwitchSlider:before {
 
 .tooltip {
     position: absolute;
-    padding: 8px 12px;
     z-index: 1001;
     background-color: var(--background-floating);
     max-width: 190px;
     width: auto;
     display: block;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.24);
     border-radius: 5px;
     pointer-events: none;
     transition: .1s opacity;
 }
 
 .tooltip .content {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
+    font-weight: 500;
+    color: #dcddde;
     line-height: 16px;
+    padding: 8px 12px;
+    overflow: hidden;
 }
 
 .tooltip .pointer {
