--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -342,8 +342,8 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
 .overlay #container {
     position: relative;
     transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6),  opacity 0.5s ease;
-    max-width: 60vw;
-    max-height: 70vh;
+    max-width: 75vw;
+    max-height: 75vh;
     background: #252626;
     display: inline;
     border-radius: 8px;
@@ -357,15 +357,22 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     font-family: 'Candara';
 }
 
-.overlay #container div.icon {
+.overlay #container > div.icon {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.overlay #container h1 {
-    font-size: 2.5em;
+.overlay #container > h1 {
+    font-size: 2em;
     margin: 10px 0;
+}
+
+.overlay #container > .inner-container {
+    position: relative;
+    width: 65vw;
+    height: 55vh;
+
 }
 
 .overlay.hidden #container {
@@ -437,15 +444,15 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     width: 8em;
 }
 
-.overlay #container p {
+.overlay #container > p {
     margin: 2em 0;
 }
 
-.overlay #container svg {
+.overlay #container > svg {
     transition: all 0.5s cubic-bezier(0.34, 1.56, 0.64, 1) 0.1s;    
 }
 
-.overlay #container hr {
+.overlay #container > hr {
     border: 0;
     height: 1px;
     background: #333;
@@ -593,6 +600,7 @@ svg[data-icon="success-circle"] {
     overflow: hidden;
     flex-shrink: 0;
     font-weight: 500;
+    text-align: start;
 }
 
 .navItem {
@@ -722,7 +730,7 @@ h5 {
     font-weight: 400;
     color: var(--header-secondary);
 }
-.container-cc3V .divider {
+.divider {
     margin: 20px 0 0 0;
 }
 
@@ -1250,6 +1258,7 @@ input:checked + .toggleSwitchSlider:before {
 
 #version-selector .main-content {
     padding: 25px 50px 70px 25px;
+    text-align: start;
 }
 
 .container-f {
@@ -1281,6 +1290,7 @@ input:checked + .toggleSwitchSlider:before {
     overflow: hidden;
     flex: 1;
     user-select: none;
+    text-align: start;
 }
 .container-f .header:hover {
     background-color: #4f545c29;
