--- a/app/app.ejs
+++ b/app/app.ejs
@@ -40,6 +40,7 @@
     <script src="./assets/js/ui/popup-element.js"></script>
     <script src="./assets/js/ui/slider-element.js"></script>
     <script src="./assets/js/panel.js"></script>
+    <script src="./assets/js/ui/dropdown-selector.js"></script>
     <script src="./assets/js/scripts/svg.js"></script>
     <script src="./assets/js/settings.js"></script>
     <script src="./assets/js/versionChooser.js"></script>
