--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1521,3 +1521,31 @@ a.anchor:hover {
     align-items: center !important;
     flex-wrap: wrap;
 }
+
+.input-wrapper {
+    position: relative;
+}
+.input-wrapper > .file {
+    display: none;
+}
+.input-wrapper > .file-flex {
+    display: flex;
+}
+.input-wrapper > .file-flex > .file-name {
+    
+}
+.input-wrapper > .file-flex > .file-button {
+    background: #3479ce;
+    border: none;
+    border-radius: 0;
+    width: 100px;
+    box-sizing: border-box;
+    padding: 2px 10px;
+    background-color: #4493c7;
+    transition: all 0.6s;
+    color: #FFF;
+    font-size: 15px;
+    vertical-align: middle;
+    text-transform: uppercase;
+    margin-left: 1rem;
+}
