some version chooser fixes

--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -731,7 +731,7 @@ h5 {
     color: var(--header-secondary);
 }
 .divider {
-    margin: 20px 0 0 0;
+    margin: 20px 0 0 0 !important;
 }
 .full {
     margin: 8px 0;
