--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -594,7 +594,7 @@ svg[data-icon="success-circle"] {
     padding: 60px 6px 60px 20px;
 }
 
-.sidebar .item{
+.sidebar .item, .content .item {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -1368,11 +1368,13 @@ input:checked + .toggleSwitchSlider:before {
     animation-iteration-count: infinite;
     animation-name: placeHolderShimmer;
     animation-timing-function: linear;
-    background: linear-gradient(to right, var(--background-primary) 8%, #dddddd 18%, var(--background-primary) 33%);
+    background: linear-gradient(to right, var(--background-primary) 10%, #dddddd80 20%, var(--background-primary) 30%);
     background-size: 200% 1px;
     cursor: default;
     user-select: none;
-    margin: 5px 0;
+    /*margin: 5px 0;*/
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 
