--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -339,7 +339,7 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     justify-items: center;
 }
 
-.overlay #container {
+.overlay > .container-ov1 {
     position: relative;
     transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6),  opacity 0.5s ease;
     max-width: 75vw;
@@ -357,32 +357,33 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     font-family: 'Segoe UI';
 }
 
-.overlay #container > div.icon {
+.overlay > .container-ov1 > div.icon {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.overlay #container > h1 {
+.overlay > .container-ov1 > h1 {
     font-size: 2em;
     margin: 10px 0;
 }
 
-.overlay #container > .inner-container {
+.overlay > .container-ov1 > .inner-container {
     position: relative;
-    width: 65vw;
-    height: 60vh;
-
+    width: 70vw;
+    height: 65vh;
+    max-width: 70em;
+    max-height: 40em;
 }
 
-.overlay.hidden #container {
+.overlay.hidden > .container-ov1 {
     transform: scale(0.5);
     opacity: 0;
 }
 .hidden .tools {
     opacity: 0;
 }
-.overlay.hidden #container svg {
+.overlay.hidden > .container-ov1 svg {
     transform: scale(0);
     opacity: 0;
 }
@@ -425,17 +426,17 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
 }
 
 /* === Primary Button for overlay === */
-.overlay #container .primary-button {
+.overlay > .container-ov1 .primary-button {
     background-color: #10a010;
 }
-.overlay #container .primary-button:hover {
+.overlay > .container-ov1 .primary-button:hover {
     background-color: #109010;
 }
-.overlay #container .primary-button:active {
+.overlay > .container-ov1 .primary-button:active {
     background-color: #108010;
 }
 
-.overlay #container button {
+.overlay > .container-ov1 button {
     font-family: 'Candara';
     font-size: 16px;
     font-weight: 900;
@@ -444,15 +445,15 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     width: 8em;
 }
 
-.overlay #container > p {
+.overlay > .container-ov1 > p {
     margin: 2em 0;
 }
 
-.overlay #container > svg {
+.overlay > .container-ov1 > svg {
     transition: all 0.5s cubic-bezier(0.34, 1.56, 0.64, 1) 0.1s;    
 }
 
-.overlay #container > hr {
+.overlay > .container-ov1 > hr {
     border: 0;
     height: 1px;
     background: #333;
@@ -461,10 +462,10 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
 /* ------------------------------------------- */
 
 
-#container::-webkit-scrollbar-thumb {
+.overlay > .container-ov1::-webkit-scrollbar-thumb {
     background-color: transparent;
 }
-#container:hover::-webkit-scrollbar-thumb {
+.overlay > .container-ov1:hover::-webkit-scrollbar-thumb {
     background-color: rgb(170, 170, 170, 0.7);
 }
 
