added resolution input

--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1627,18 +1627,18 @@ a.anchor:hover {
     border-radius: initial;
 }
 
-.input-wrapper.resolution {
+.input-wrapper > .resolution {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: baseline;
 }
 
-.input-wrapper.resolution > input {
+.input-wrapper > .resolution > input {
     text-align: center;
 }
 
-.input-wrapper.resolution .resolutionCross {
+.input-wrapper > .resolution > .resolutionCross {
     position: relative;
     margin: 0 1em;
 }
