--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1012,7 +1012,7 @@ input:checked + .toggleSwitchSlider:before {
 }
 .sidebar-main > .localVersions > .scroller > .content {
     position: relative;
-    height: 100%;
+    /*height: 100%;*/
 }
 .sidebar-main > .localVersions > .scroller .fp {
     height: 90%;
